// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AA setup flow renders sidebar when authenticated on /setup 1`] = `
<div>
  <div
    class="sc-bdVaJa bKocXA"
  >
    <div
      class="bp3-callout sc-eHgmQL gudjM"
    >
      <div
        class="sc-bwzfXH jiphYj"
      >
        <div
          class="text"
        >
          <h3
            class="bp3-heading sc-hSdWYo ebeAbt"
          >
            Test Audit
          </h3>
          <h4
            class="bp3-heading"
          >
            The audit has not started.
          </h4>
          <p>
            Audit setup is complete.
          </p>
          <p>
            0 of 2 jurisdictions have completed file uploads.
          </p>
          <span
            class="bp3-tag sc-frDJqD jVpSKa"
          >
            <span
              class="bp3-text-overflow-ellipsis bp3-fill"
            >
              Will refresh in 5 minutes
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-bwzfXH jiphYj"
    >
      <div
        class="sc-bxivhb jyZAjn"
      >
        <h2
          class="bp3-heading sc-htpNat fysvnw"
        >
          Audit Setup
        </h2>
        <ul
          class="bp3-menu"
        >
          <li
            class=""
          >
            <a
              class="bp3-menu-item bp3-active bp3-intent-primary bp3-popover-dismiss"
            >
              <div
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Participants
              </div>
            </a>
          </li>
          <li
            class="bp3-menu-divider"
          />
          <li
            class=""
          >
            <a
              class="bp3-menu-item bp3-disabled"
              tabindex="-1"
            >
              <div
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Target Contests
              </div>
              <span
                class="bp3-menu-item-label"
              >
                <div
                  class="bp3-spinner"
                >
                  <div
                    class="bp3-spinner-animation"
                  >
                    <svg
                      height="20"
                      stroke-width="16.00"
                      viewBox="-3.00 -3.00 106.00 106.00"
                      width="20"
                    >
                      <path
                        class="bp3-spinner-track"
                        d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                      />
                      <path
                        class="bp3-spinner-head"
                        d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                        pathLength="280"
                        stroke-dasharray="280 280"
                        stroke-dashoffset="210"
                      />
                    </svg>
                  </div>
                </div>
              </span>
            </a>
          </li>
          <li
            class="bp3-menu-divider"
          />
          <li
            class=""
          >
            <a
              class="bp3-menu-item bp3-disabled"
              tabindex="-1"
            >
              <div
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Opportunistic Contests
              </div>
              <span
                class="bp3-menu-item-label"
              >
                <div
                  class="bp3-spinner"
                >
                  <div
                    class="bp3-spinner-animation"
                  >
                    <svg
                      height="20"
                      stroke-width="16.00"
                      viewBox="-3.00 -3.00 106.00 106.00"
                      width="20"
                    >
                      <path
                        class="bp3-spinner-track"
                        d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                      />
                      <path
                        class="bp3-spinner-head"
                        d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                        pathLength="280"
                        stroke-dasharray="280 280"
                        stroke-dashoffset="210"
                      />
                    </svg>
                  </div>
                </div>
              </span>
            </a>
          </li>
          <li
            class="bp3-menu-divider"
          />
          <li
            class=""
          >
            <a
              class="bp3-menu-item bp3-popover-dismiss"
            >
              <div
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Audit Settings
              </div>
            </a>
          </li>
          <li
            class="bp3-menu-divider"
          />
          <li
            class=""
          >
            <a
              class="bp3-menu-item bp3-popover-dismiss"
            >
              <div
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Review & Launch
              </div>
            </a>
          </li>
        </ul>
      </div>
      <div
        class="sc-htoDjs tELUi"
      >
        <h2
          class="bp3-heading sc-htpNat fysvnw"
        >
          Participants
        </h2>
        <form>
          <div
            class="sc-htoDjs tELUi"
          >
            <h2
              class="bp3-heading sc-htpNat fysvnw"
            />
            <div
              class="sc-gZMcBi ekJoNA"
            >
              <div
                class="sc-gqjmRU fOytwc"
              >
                Click "Browse" to choose the appropriate file from your computer. This file should be a comma-separated list of all the jurisdictions participating in the audit, plus email addresses for audit administrators in each participating jurisdiction.
                <br />
                <br />
                <a
                  href="/sample_jurisdiction_filesheet.csv"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  (Click here to view a sample file in the correct format.)
                </a>
              </div>
            </div>
            <div
              class="sc-gZMcBi ekJoNA"
            >
              <p>
                <strong>
                  Current file:
                </strong>
                 
                file name
              </p>
              <p
                class="sc-iwsKbI cBoYPA"
              >
                Upload successfully completed at
                 
                12/4/2020, 2:32:15 AM
                .
              </p>
            </div>
            <div>
              <button
                class="bp3-button sc-gzVnrw kdzzfK"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Replace File
                </span>
              </button>
            </div>
          </div>
        </form>
        <div
          class="sc-ifAKCX jylclZ"
        >
          <button
            class="bp3-button bp3-intent-primary sc-gzVnrw kdzzfK"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              Next
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JA setup renders initial state 1`] = `
<div>
  <div
    class="sc-bdVaJa bKocXA"
  >
    <div
      class="bp3-callout sc-eHgmQL gudjM"
    >
      <div
        class="sc-bwzfXH jiphYj"
      >
        <div
          class="text"
        >
          <h3
            class="bp3-heading sc-hSdWYo ebeAbt"
          >
            Test Audit
          </h3>
          <h4
            class="bp3-heading"
          >
            The audit has not started.
          </h4>
          <p>
            0/2 files successfully uploaded.
          </p>
        </div>
      </div>
    </div>
    <div
      class="sc-bwzfXH sc-hmzhuo hwfNhd"
    >
      <h2
        class="bp3-heading sc-htpNat fysvnw"
      >
        Audit Source Data
      </h2>
      <form>
        <div
          class="sc-htoDjs tELUi"
        >
          <h2
            class="bp3-heading sc-htpNat fysvnw"
          />
          <div
            class="sc-gZMcBi ekJoNA"
          >
            <h4
              class="bp3-heading"
            >
              Ballot Manifest
            </h4>
            <div
              class="sc-gqjmRU fOytwc"
            >
              Click "Browse" to choose the appropriate Ballot
                Manifest file from your computer. This file should be a
                comma-separated list of all the ballot boxes/containers used
                to store ballots for this particular election, plus a count of
                how many ballot cards (individual pieces of paper) are stored
                in each container.
              <br />
              <br />
              <a
                href="/sample_ballot_manifest.csv"
                rel="noopener noreferrer"
                target="_blank"
              >
                (Click here to view a sample file in the correct format.)
              </a>
            </div>
          </div>
          <div
            class="sc-gZMcBi ekJoNA"
          >
            <label
              class="bp3-file-input"
            >
              <input
                accept=".csv"
                name="csv"
                type="file"
              />
              <span
                class="bp3-file-upload-input"
              >
                Select a CSV...
              </span>
            </label>
          </div>
          <div>
            <button
              class="bp3-button bp3-intent-primary sc-gzVnrw kdzzfK"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Upload File
              </span>
            </button>
          </div>
        </div>
      </form>
      <form>
        <div
          class="sc-htoDjs tELUi"
        >
          <h2
            class="bp3-heading sc-htpNat fysvnw"
          />
          <div
            class="sc-gZMcBi ekJoNA"
          >
            <h4
              class="bp3-heading"
            >
              Candidate Totals by Batch
            </h4>
            <div
              class="sc-gqjmRU fOytwc"
            >
              Click "Browse" to choose the appropriate Candidate Totals by Batch file from your computer. This file should be a comma-separated list of all the ballot boxes/containers used to store ballots for this particular election, plus a count of how many votes were counted for each candidate in each of those containers.
              <br />
              <br />
              <a
                href="/sample_candidate_totals_by_batch.csv"
                rel="noopener noreferrer"
                target="_blank"
              >
                (Click here to view a sample file in the correct format.)
              </a>
            </div>
          </div>
          <div
            class="sc-gZMcBi ekJoNA"
          >
            <label
              class="bp3-file-input bp3-disabled"
            >
              <input
                accept=".csv"
                disabled=""
                name="csv"
                type="file"
              />
              <span
                class="bp3-file-upload-input"
              >
                Select a CSV...
              </span>
            </label>
          </div>
          <div>
            <button
              class="bp3-button bp3-disabled bp3-intent-primary sc-gzVnrw kdzzfK"
              disabled=""
              tabindex="-1"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Upload File
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
